info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

DIANA_API int setDefaultActiveWorkpiecePose(/*IN[6]*/ double *dblWopPose, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDefaultActiveWorkpiece(/*OUT[16]*/ double *dblWop, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDefaultActiveWorkpiecePose(/*OUT[6]*/ double *dblWopPose, /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDriving_ex(/*IN*/ bool enable, /*[IN]*/ int intFrameType, /*IN[6]*/ double *dblForceDirection,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int setControllerFeatureCode(/*IN*/ controller_feature intFeatureCode, /*IN*/ bool bEnable,
                                       /*IN*/ const char *strIpAddress = "");
DIANA_API int testControllerFeature(/*IN*/ controller_feature intFeatureCode, /*OUT*/ bool &bEnable,
                                    /*IN*/ const char *strIpAddress = "");
DIANA_API int enableSixAxis(/*IN*/ six_axis_type_e type, /*IN & OUT*/ bool &bEnable,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API bool isSixAxisEnabled(/*IN*/ six_axis_type_e type, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.9***************************************/

DIANA_API int getMechanicalJointsPositionRange(/*OUT[7]*/ double *dblMinPos, /*OUT[7]*/ double *dblMaxPos,
                                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxJointsVel(/*OUT[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxJointsAcc(/*OUT[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMechanicalMaxCartVelAcc(/*OUT*/ double &dblMaxCartTranslationVel,
                                         /*OUT*/ double &dblMaxCartRotationVel,
                                         /*OUT*/ double &dblMaxCartTranslationAcc,
                                         /*OUT*/ double &dblMaxCartRotationAcc,
                                         /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointsPositionRange(/*OUT[7]*/ double *dblMinPos, /*OUT[7]*/ double *dblMaxPos,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxJointsVel(/*OUT[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxJointsAcc(/*OUT[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartTranslationVel(/*OUT*/ double &dblMaxCartTranslationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartRotationVel(/*OUT*/ double &dblMaxCartRotationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartTranslationAcc(/*OUT*/ double &dblMaxCartTranslationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int getMaxCartRotationAcc(/*OUT*/ double &dblMaxCartRotationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setJointsPositionRange(/*IN[7]*/ double *dblMinPos, /*IN[7]*/ double *dblMaxPos,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxJointsVel(/*IN[7]*/ double *dblVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxJointsAcc(/*IN[7]*/ double *dblAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartTranslationVel(/*IN*/ double dblMaxCartTranslationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartRotationVel(/*IN*/ double dblMaxCartRotationVel, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartTranslationAcc(/*IN*/ double dblMaxCartTranslationAcc, /*IN*/ const char *strIpAddress = "");
DIANA_API int setMaxCartRotationAcc(/*OUT*/ double dblMaxCartRotationAcc, /*IN*/ const char *strIpAddress = "");